--- a/src/template/hadithLocalTemplate.html
+++ b/src/template/hadithLocalTemplate.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الحديث الشريف - {{book}}</title>
     <style>
+        @import url('{{font_rubik}}');
+
         /* تصميم جديد وحديث مع ألوان جذابة */
         * {
             margin: 0;
@@ -14,7 +16,9 @@
         }
 
         body {
-            font-family: 'Tajawal', sans-serif;
+            font-family: "Rubik", sans-serif;
+            font-optical-sizing: auto;
+            font-style: normal;
             background-color: #f0f2f5;
             color: #333;
             direction: rtl;
